# inverted_index

./: README.md  pyproject.toml
src/: main.py
src/services/: openalex.py
src/utils/: inverted_index.py
tests/: setup.py
