[tool.poetry]
name = "inverted-index"
version = "0.1.0"
description = ""
authors = ["rul-duran <raulduran816@gmail.com>"]
readme = "README.md"
packages = [{include = "inverted_index"}]

[tool.poetry.scripts]
start = "main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
