[tool.poetry]
name = "inverted-index"
version = "0.1.0"
description = ""
authors = ["rul-duran <raulduran816@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
start = "python3:src/main.py"
test = "pytest:tests/setup.py"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
logging = "^0.4.9.6"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
